--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 @import url('font-awesome.css'); 
 @import url('material-design-iconic-font.min.css'); 
-@import url("http://fonts.googleapis.com/css?family=Raleway:300,500,700,800");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,500,700,800");
 
 html {
   position: relative;
